# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

## Changed

- O comando `/estatísticas fazendeiro` agora mostra a experiência da fazendinha. - Sugerido por @rafaelxd27. 

## [6.1.3] - 2025-11-28

### Fixed

- Corrigido parcialmente o problema de plantas ficarem negativas no silo. Agora caso aconteça, um erro será gerado.

## [6.1.2] - 2025-11-06

### Fixed

- Corrigido o comando `/personalizar badges`, que falhava com usuários que possuem a badge de 5 anos com a Menhera.

## [6.1.1] - 2025-11-05

### Fixed

- Corrigido o comando `/trisal formar`, que dependendo do tamanho do nome do usuário, não funcionava.

## [6.1.0] - 2025-11-04

### Fixed

- Corrigido um problema no comando `/fazendinha feira comprar` que fazia com que o comando só não respondesse.

### Removed

- Removido os comandos filosofia e astolfo, para evitar que usuários mal intencionados consigam banir a Menhera com textos "falados pela Menhera".

## [6.0.0] - 2025-10-22

### Changed

- Atualizado versão do interpretador da Menhera.
- Atualizado a versão de bibliotecas da Menhera. Com isso, agora é possível a nova versão 2 dos componentes. Pode existir problemas em comandos existentes com essas modificações. Reportem tudo que encontrarem! 
- Diminuido mínimo para apostas no poker de `10000` para `1000` estrelinhas.

### Fixed

- Corrigido erro de tradução no comando poker.

## [5.21.5] - 2025-08-08

### Fixed

- Corrigido cálculo de espaço do silo para receber fertilizantes. - Reportado por @start_0

## [5.21.4] - 2025-07-31

### Changed

- O texto das plantações agora mostra exatamente quando a plantação vai estar madura/apodrecida.

## [5.21.3] - 2025-07-03

### Fixed
