@@ -206,7 +206,7 @@
     "invalid-option": "Essa escolha é inválida",
     "buy_item": {
       "title": "🔮 | Itens Mágicos",
-      "description": "Selectione abaixo qual item você deseja comprar",
+      "description": "Selecione abaixo qual item você deseja comprar",
       "hasAll": "Você já possui todos os itens mágicos disponíveis",
       "poor": "Você não possui estrelas suficientes para comprar este item!",
       "success": "Você comprou **{{item}}** com sucesso! Só dale nas caças agora. Use {{command}} para usar o item"
