@@ -9,8 +9,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 
 ## Changed
 
-- O comando `/estatísticas fazendeiro` agora mostra a experiência da fazendinha. - Sugerido por @rafaelxd27. 
-
+- O comando `/estatísticas fazendeiro` agora mostra a experiência da fazendinha - Sugerido por @kawajplemes7. 
+- O comando `/loja comprar itens` agora mostra a descrição do que os itens fazem - Sugerido por @rafaelxd27
+- 
 ## [6.1.3] - 2025-11-28
 
 ### Fixed
